# GPU-Programming

./: README.md  pyproject.toml
mandybrot/: __init__.py  colour.py  sample.py
scripts/: kernel.cl  run.py
